added more to about me page

--- a/index.html
+++ b/index.html
@@ -371,7 +371,11 @@
       <li><a href="http://twitter.com/joshontheweb">@joshontheweb</a> on twitter</li>
       <li><a href="http://github.com/joshontheweb">github.com/joshontheweb</a></li>
       <li><a href="http://joshontheweb.com">joshontheweb.com</a></li>
-      <li><a href="http://introtocanvas.joshontheweb.com"></a></li>
+    </ul>
+
+    <ul>
+      <li>slides are hosted here: <a href="http://introtocanvas.joshontheweb.com">introtocanvas.joshontheweb.com</a></li>
+      <li>and on github: <a href="http://github.com/joshontheweb/introtocanvas">github.com/joshontheweb/introtocanvas</a></li>
     </ul>
   
   </script>
